2004-09-09  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* NEWS: Add note about bug #10078.
	* include/string.h (strsep): Remove __ATTR_PURE__, bug #10078.
	(strtok_r): Remove __ATTR_PURE__ too.
	(strncmp): Add __ATTR_PURE__.

2004-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/twitest/twitest.c: Make it work on 1 MHz clock.
	* doc/examples/twitest/twitest.dox: Renumber annotations.

2004-07-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdint.h: created from old inttypes.h.
	* include/inttypes.h: reduced to #include <stdint.h>.

2004-07-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/sleep.h: protect function-like macros, fix savannah bug
	#9013.
	* include/avr/ina90.h: Ditto.

2004-07-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdio.h: Doc update: binary vs. raw streams explained,
	fix for savannah bug #9704.

2004-07-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/strtod.S: fix parsing of a partial
	exponent, fix *endp return value (savanna bug #2924)

2004-07-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: Fix the use of progmem tables, closes
	savannah bug #9669.
	* NEWS: mention fix for bug #9669, mention demo.c update.

2004-07-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo.c: Update for ATmega32

2004-07-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/pow.S: localize labels, fix pow(N, 0).

2004-07-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/inttypes.h: avr-gcc >= 3.5 will be able to
	provide [u]int32_t when -mint8 is in effect.

2004-06-08  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* Makefile.am (install-data-local): Install version.h file.
	* acconfig.h: New file.
	* config-ml.in: When adding the Multi.tem fragment to the Makefile,
	don't use a variable or the fragment will be added to the version.h
	file instead of the Makefile.