@@ -138,7 +138,7 @@ AC_CANONICAL_SYSTEM
 dnl NOTE: Don't put a '-' in the version number or rpm will puke 
 dnl when building the package.
 dnl
-AM_INIT_AUTOMAKE(avr-libc, 1.0.4.20040909)
+AM_INIT_AUTOMAKE(avr-libc, 1.0.4.20040910)
 AM_CONFIG_HEADER(version.h:version-h.in)
 
 AC_DEFINE(__AVRLIBC__,1)
